--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Particle System ES6/ASM.js/WebASM Project",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-lib-dev": "webpack --watch --progress --colors --config ./webpack/webpack.config.development.js",
-    "build-lib-prod": "webpack --progress --colors --config ./webpack/webpack.config.production.js",
-    "build-tests": "webpack --progress --colors --config ./webpack/webpack.config.production.js",
+    "build-lib-dev": "webpack --watch --progress --colors --config ./webpack/particleLib/webpack.config.development.js",
+    "build-lib-prod": "webpack --progress --colors --config ./webpack/particleLib/webpack.config.production.js",
+    "build-asm-test": "webpack --progress --colors --config ./webpack/test-es6-vs-asm/webpack.config.js",
+    "build-wasm-test": "webpack --progress --colors --config ./webpack/test-es6-vs-wasm/webpack.config.js",
+    "build-tests": "npm run build-asm-test && npm run build-wasm-test"
   },
   "author": "Philippe Leefsma",
   "dependencies": {
@@ -14,11 +16,8 @@
     "babel-loader": "^6.2.2",
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.5.0",
-    "backbone": "1.3.1",
     "css-loader": "^0.23.1",
-    "dat-gui": "0.5.0",
     "debug": "2.2.0",
     "file-loader": "^0.8.5",
     "image-webpack-loader": "^1.6.3",
@@ -29,8 +28,6 @@
     "lodash": "^4.11.1",
     "style-loader": "^0.13.0",
     "systemjs": "0.19.22",
-    "traceur": "0.0.104",
-    "ts-loader": "^0.8.1",
     "webpack": "^1.12.13"
   }
 }
